--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@
 
 # firebase
 /.firebase
+firebase.json
+firebase-debug.log
 
 # debug
 npm-debug.log*
@@ -33,3 +35,5 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 .env.example
+firebase-debug.log
+firebase.json
