--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "eventsource-parser": "^1.0.0",
     "firebase": "^9.15.0",
     "firebase-admin": "^11.4.0",
     "firebase-functions": "^4.2.1",
@@ -22,6 +23,7 @@
     "react-select": "^5.7.0"
   },
   "devDependencies": {
-    "sass": "^1.57.0"
+    "sass": "^1.57.0",
+    "typescript": "^5.0.4"
   }
 }
