--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-select": "^5.7.5"
   },
   "devDependencies": {
-    "sass": "^1.57.0",
+    "encoding": "^0.1.13",
+    "sass": "^1.68.0",
     "typescript": "5.2.2"
   }
 }
